--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -2,6 +2,12 @@
   <h1>New Organization</h1>
 </div>
 
+<% if @organization.errors.present? %>
+   <% @organization.errors.full_messages.each do |message| %>
+     <p class="text-danger"><%= message %></p>
+     <% end %>
+ <% end %>
+
 <%= form_for @organization, html: {class: "form-horizontal"} do |f| %>
   <div class="form-group">
     <%= f.label :name, class: "control-label col-sm-2" %>
