--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -2,6 +2,12 @@
   <h1>New Person</h1>
 </div>
 
+ <% if @person.errors.present? %>
+    <% @person.errors.full_messages.each do |message| %>
+      <p class="text-danger"><%= message %></p>
+      <% end %>
+  <% end %>
+
 <%= form_for @person, html: {class: "form-horizontal"} do |f| %>
   <div class="form-group">
     <%= f.label :first_name, class: "control-label col-sm-2" %>
